<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sakura Pro</string>
    <string name="service_label">Sakura Pro</string>
    <string name="settings_label">Sakura Settings</string>
    <string name="author">Xllusion</string>
    <string name="description">A beautiful Sakura live wallpaper which lets you interact with falling leaves.</string>
    <string name="choose_app">Choose Sakura Pro</string>
    <string name="theme_category_label">Theme</string>
    <string name="theme_title_label">Background Theme</string>
    <string name="theme_summary_label">Change to different background theme</string>
    <string name="sakura_category_label">Sakura</string>
    <string name="color_title_label">Sakura Color</string>
    <string name="color_summary_label">Change Sakura color</string>
    <string name="type_title_label">Sakura Type</string>
    <string name="type_summary_label">Change Sakura type</string>
    <string name="leaf_category_label">Leaf</string>
    <string name="petal_title_label">Petal Color</string>
    <string name="petal_summary_label">Change petal color</string>
    <string name="lock_petal_color_title_label">Lock Petal Color</string>
    <string name="lock_petal_color_summary_label">Lock petal color to be the same as Sakura color</string>
    <string name="total_title_label">Total Leaves</string>
    <string name="total_summary_label">Change number of Sakura leaves falling down</string>
    <string name="leaf_type_title_label">Leaf Type</string>
    <string name="leaf_type_summary_label">Change type of leaves falling down</string>
    <string name="falling_mode_title_label">Falling Mode</string>
    <string name="falling_mode_summary_label">Change the way of leaves falling down</string>
    <string name="speed_title_label">Leaf Speed</string>
    <string name="speed_summary_label">Change speed of falling leaves</string>
    <string name="acceleration_title_label">Leaf Acceleration</string>
    <string name="acceleration_summary_label">Change acceleration of falling leaves when rotating right/left</string>
    <string name="accelerate_title_label">Accelerate leaves</string>
    <string name="accelerate_summary_label">Enable leaves acceleration when the screen is rotating right/left</string>
    <string name="smooth_title_label">Smooth Leaf</string>
    <string name="smooth_summary_label">Smooth the edge of leaf, maybe slower on some devices</string>
    <string name="seed_title_label">Seed Effect</string>
    <string name="seed_summary_label">Enable seed effect</string>
    <string name="moon_category_label">Moon</string>
    <string name="moon_title_label">Moon</string>
    <string name="moon_summary_label">Put the moon in the background</string>
    <string name="mountain_category_label">Mountain</string>
    <string name="mountain_title_label">Mountain</string>
    <string name="mountain_summary_label">Put the mountain in the background</string>
    <string name="mountain_pos_title_label">Position</string>
    <string name="mountain_pos_summary_label">Change position of the mountain</string>
    <string name="parallax_category_label">Parallax</string>
    <string name="parallax_title_label">Parallax Effect</string>
    <string name="parallax_summary_label">Enable parallax effect for background image</string>
    <string name="parallax_pos_title_label">Background Position</string>
    <string name="parallax_pos_summary_label">Change position of background when parallax effect is disabled</string>
    <string name="performance_category_label">Performance</string>
    <string name="fps_title_label">FPS</string>
    <string name="fps_summary_label">High FPS for smoother performance, low FPS for better battery life</string>
    <string name="more_category_label">More</string>
    <string name="share_app_title_label">Share This App</string>
    <string name="twitter_title_label">Follow us on Twitter</string>
</resources>
